<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_gallery">

    <fragment
        android:id="@+id/nav_home"
        android:name="alnabras.net.ashora.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="alnabras.net.ashora.ui.zayart_ashora.zayart_ashora_Fragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_zayart_ashora" />

    <fragment
        android:id="@+id/nav_dua_alqamah"
        android:name="alnabras.net.ashora.ui.dua_alqamah.dua_alqamahFragment"
        android:label="@string/menu_dua_alqamah"
        tools:layout="@layout/fragment_dua_alqamah" />

    <fragment
        android:id="@+id/zayart_forty"
        android:name="alnabras.net.ashora.ui.zayart_forty.zayart_forty_Fragment"
        android:label="@string/zayart_forty"
        tools:layout="@layout/fragment_zayart_forty" />

    <fragment
        android:id="@+id/nav_share"
        android:name="alnabras.net.ashora.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="alnabras.net.ashora.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

</navigation>