<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_home"
            android:visible="false" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_dua_alqamah"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_dua_alqamah" />
        <item
            android:id="@+id/zayart_forty"
            android:icon="@drawable/ic_star"
            android:title="@string/zayart_forty" />

    </group>

</menu>
